# trademe-tinymcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
contracts/: tools.json
src/scripts/: update-sdk-mcp.sh
src/trademe_tinymcp/: __init__.py  server.py
